--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -150,7 +150,7 @@
   "dn15:25.6": "nicht als formlos und begrenzt … ",
   "dn15:25.8": "und nicht als formlos und unendlich: ",
   "dn15:25.9": "‚Mein Selbst ist formlos und unendlich.‘ ",
-  "dn15:26.1": "Nehmen wir nun die, die das Selbst nicht als materiell und begrenzt beschreiben … ",
+  "dn15:26.1": "Nehmen wir nun die, die das Selbst nicht als geformt und begrenzt beschreiben … ",
   "dn15:26.4": "nicht als materiell und unendlich … ",
   "dn15:26.7": "nicht als immateriell und begrenzt … ",
   "dn15:26.10": "und nicht als immateriell und unendlich. ",
