--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -152,7 +152,7 @@
   "dn15:25.9": "‚Mein Selbst ist formlos und unendlich.‘ ",
   "dn15:26.1": "Nehmen wir nun die, die das Selbst nicht als geformt und begrenzt beschreiben … ",
   "dn15:26.4": "nicht als geformt und unendlich … ",
-  "dn15:26.7": "nicht als immateriell und begrenzt … ",
+  "dn15:26.7": "nicht als formlos und begrenzt … ",
   "dn15:26.10": "und nicht als immateriell und unendlich. ",
   "dn15:26.11": "Sie beschreiben das Selbst nicht als immateriell und unendlich in der Gegenwart; auch nicht als etwas, das an einem anderen Ort immateriell und unendlich werden muss; und sie denken auch nicht: ‚Obwohl es nicht so ist, werde ich sicherstellen, dass es das bekommt, was nötig ist, damit es so wird.‘ ",
   "dn15:26.12": "Wenn das so ist, dann ist es angebracht, zu sagen, dass bei ihnen kein Glaube an ein Selbst als immateriell und unendlich zugrunde liegt. ",
