--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -155,7 +155,7 @@
   "dn15:26.7": "nicht als formlos und begrenzt … ",
   "dn15:26.10": "und nicht als formlos und unendlich. ",
   "dn15:26.11": "Sie beschreiben das Selbst nicht als formlos und unendlich in der Gegenwart; auch nicht als etwas, das an einem anderen Ort formlos und unendlich werden muss; und sie denken auch nicht: ‚Obwohl es nicht so ist, werde ich sicherstellen, dass es das bekommt, was nötig ist, damit es so wird.‘ ",
-  "dn15:26.12": "Wenn das so ist, dann ist es angebracht, zu sagen, dass bei ihnen kein Glaube an ein Selbst als immateriell und unendlich zugrunde liegt. ",
+  "dn15:26.12": "Wenn das so ist, dann ist es angebracht, zu sagen, dass bei ihnen kein Glaube an ein Selbst als formlos und unendlich zugrunde liegt. ",
   "dn15:26.13": "Die, die kein Selbst beschreiben: Insofern beschreiben sie es nicht. ",
   "dn15:27.0": "4. Das Selbst betrachten ",
   "dn15:27.1": "Die, die ein Selbst betrachten: Inwiefern betrachten sie es? ",
