--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -424,7 +424,7 @@
   "dn1:2.38.2": "Und was sind die sechzehn Grundlagen, auf die sie sich stützen? ",
   "dn1:2.38.3": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und besitzt Wahrnehmung, und es ist geformt … ",
   "dn1:2.38.4": "und es ist formlos … ",
-  "dn1:2.38.5": "und es besitzt Form und ist auch formlos … ",
+  "dn1:2.38.5": "und es ist geformt und auch formlos … ",
   "dn1:2.38.6": "und es besitzt weder Form, noch ist es formlos … ",
   "dn1:2.38.7": "und es ist endlich … ",
   "dn1:2.38.8": "und es ist unendlich … ",
