--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -425,7 +425,7 @@
   "dn1:2.38.3": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und besitzt Wahrnehmung, und es ist geformt … ",
   "dn1:2.38.4": "und es ist formlos … ",
   "dn1:2.38.5": "und es ist geformt und auch formlos … ",
-  "dn1:2.38.6": "und es besitzt weder Form, noch ist es formlos … ",
+  "dn1:2.38.6": "und es ist weder geformt noch formlos … ",
   "dn1:2.38.7": "und es ist endlich … ",
   "dn1:2.38.8": "und es ist unendlich … ",
   "dn1:2.38.9": "und es ist sowohl endlich als auch unendlich … ",
