--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -447,7 +447,7 @@
   "dn1:3.1.2": "Und was sind die acht Grundlagen, auf die sie sich stützen? ",
   "dn1:3.2.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und ohne Wahrnehmung, und ist geformt … ",
   "dn1:3.2.2": "und es ist formlos … ",
-  "dn1:3.2.3": "und es besitzt Form und ist auch formlos … ",
+  "dn1:3.2.3": "und es ist geformt und auch formlos … ",
   "dn1:3.2.4": "und es besitzt weder Form, noch ist es formlos … ",
   "dn1:3.2.5": "und es ist endlich … ",
   "dn1:3.2.6": "und es ist unendlich … ",
