--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -463,7 +463,7 @@
   "dn1:3.6.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und hat weder Wahrnehmung noch keine Wahrnehmung, und es ist geformt … ",
   "dn1:3.6.2": "und es ist formlos … ",
   "dn1:3.6.3": "und es ist geformt und auch formlos … ",
-  "dn1:3.6.4": "und es besitzt weder Form, noch ist es formlos … ",
+  "dn1:3.6.4": "und es ist weder geformt noch formlos … ",
   "dn1:3.6.5": "und es ist endlich … ",
   "dn1:3.6.6": "und es ist unendlich … ",
   "dn1:3.6.7": "und es ist sowohl endlich als auch unendlich … ",
