--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -363,7 +363,7 @@
   "dn29:37.4": "‚Das Selbst ist nach dem Tod geformt und frei von Krankheit; ",
   "dn29:37.6": "oder es ist formlos; ",
   "dn29:37.7": "oder es ist geformt und auch formlos; ",
-  "dn29:37.8": "oder es besitzt weder Form noch ist es formlos; ",
+  "dn29:37.8": "oder es ist weder geformt noch formlos; ",
   "dn29:37.9": "es besitzt Wahrnehmung; ",
   "dn29:37.10": "oder ist ohne Wahrnehmung; ",
   "dn29:37.11": "oder es besitzt weder Wahrnehmung noch ist es ohne Wahrnehmung; ",
