--- a/translation/de/sabbamitta/sutta/dn/dn9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn9_translation-de-sabbamitta.json
@@ -287,7 +287,7 @@
   "dn9:39.3": "Und was ist Reinkarnation in einer festen Lebensform? ",
   "dn9:39.4": "Sie ist geformt, besteht aus den vier Grundzuständen und nimmt feste Nahrung zu sich. ",
   "dn9:39.5": "Was ist Reinkarnation in einer geistgeschaffenen Lebensform? ",
-  "dn9:39.6": "Sie besitzt Form, ist geistgeschaffen, in allen Haupt- und Nebengliedern unversehrt, ohne dass eine Fähigkeit fehlte. ",
+  "dn9:39.6": "Sie ist geformt, geistgeschaffen, in allen Haupt- und Nebengliedern unversehrt, ohne dass eine Fähigkeit fehlte. ",
   "dn9:39.7": "Was ist Reinkarnation in einer formlosen Lebensform? ",
   "dn9:39.8": "Sie ist formlos und besteht aus Wahrnehmung. ",
   "dn9:40.1": "Ich lehre den Dhamma für das Ziel, Reinkarnation in diesen drei Lebensformen aufzugeben: ",
