--- a/translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti88:3.2": "agitano il cuore: ",
   "iti88:3.3": "un pericolo che nasce dentro ",
   "iti88:3.4": "difficile da discernere (che un individuo non discerne). ",
-  "iti88:4.1": "L’avido, l’iroso e l’illuso non comprendono il senso del Dhamma, ",
+  "iti88:4.1": "L’avido, il furioso e l’illuso non comprendono il senso del Dhamma, ",
   "iti88:4.2": "non riescono a vederlo. ",
   "iti88:4.3": "Quando si è nella profonda oscurità ",
   "iti88:4.4": "l’avidità, l’odio e l’illusione conquistano qualunque individuo. ",
