--- a/translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti88:3.3": "un pericolo che nasce dentro ",
   "iti88:3.4": "difficile da discernere (che un individuo non discerne). ",
   "iti88:4.1": "Chi è avido, furioso o illuso non compre il senso del Dhamma, ",
-  "iti88:4.2": "non riescono a vederlo. ",
+  "iti88:4.2": "non riesce a vederlo. ",
   "iti88:4.3": "Quando si è nella profonda oscurità ",
   "iti88:4.4": "l’avidità, l’odio e l’illusione conquistano qualunque individuo. ",
   "iti88:5.1": "Chi annienta l’avidità ",
