--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti89:2.4": "amici malvagi, ",
   "iti89:2.5": "e il dichiarare di aver raggiunto la perfezione, pur essendo consapevole di avere ancora altro da coltivare visto l’insignificante risultato interno (dentro di se'). ",
   "iti89:3.1": "Speriamo che non appaia mai nessuno in questo mondo ",
-  "iti89:3.2": "con delle pessime aspirazioni. ",
+  "iti89:3.2": "con dei desideri malvagi. ",
   "iti89:3.3": "Grazie a questo sapete ",
   "iti89:3.4": "dove uno finirà con questa pessima aspirazione. ",
   "iti89:4.1": "Un tempo fu chiamato saggio, ",
