--- a/translation/pt/laera-quaresma/sutta/mn/mn119_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/mn/mn119_translation-pt-laera-quaresma.json
@@ -1,6 +1,6 @@
 {
   "mn119:0.1": "Majjhima Nikaya 119 ",
-  "mn119:0.2": "A atenção plena no corpo ",
+  "mn119:0.2": "A Atenção Plena no Corpo ",
   "mn119:1.1": "Assim ouvi. ",
   "mn119:1.2": "Em certa ocasião o Buda estava perto de Savatthi, no Bosque de Jeta, no Parque de Anathapindika. ",
   "mn119:2.1": "Então, após a refeição, ao retornar da coleta de esmolas, vários bhikkhus se sentaram juntos na sala de reuniões, e surgiu entre eles esta discussão. ",
@@ -8,7 +8,7 @@
   "mn119:2.3": "como o Abençoado, que conhece e vê, o aperfeiçoado, o Buda completamente desperto ensinou que a atenção plena no corpo, quando é desenvolvida e cultivada, traz grandes frutos e grandes benefícios.” ",
   "mn119:2.4": "Mas a conversa deles não foi concluída. Então, no fim da tarde, o Buda interrompeu a reclusão e foi até o salão de reuniões. Lá ele entou no assento que estava preparado ",
   "mn119:2.5": "e se dirigiu aos bhikkhus: ",
-  "mn119:2.6": "“Bhikkhus, sobre o que vocês estavam falando agora há pouco? Qual conversa não foi concluída?” ",
+  "mn119:2.6": " “Bhikkhus, sobre o que vocês estavam falando agora há pouco? Qual conversa não foi concluída?” ",
   "mn119:2.7": "“Após a refeição, ao retornar da coleta de esmolas, nós nos sentamos juntos aqui nesta sala de reuniões, e surgiu entre nós esta conversa: ",
   "mn119:2.8": "“É incrível, reverendos, é surpreendente, ",
   "mn119:2.9": "como o Abençoado, que conhece e vê, o aperfeiçoado, o Buda completamente desperto ensinou que a atenção plena no corpo, quando é desenvolvida e cultivada, traz grandes frutos e grandes benefícios.” ",
