--- a/translation/it/soma/sutta/kn/iti/vagga9/iti80_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti80_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti80:2.1": "Cercatori, ci sono tre pensieri nocivi. ",
   "iti80:2.2": "Quali tre? ",
-  "iti80:2.3": "Pensieri di non ricevere rispetto; di ottenere guadagno, onore e fama (guadagno, ammirazione, e popolarità); di simpatia per gli altri. ",
+  "iti80:2.3": "Pensieri di non ricevere rispetto, di guadagno, onore e fama (guadagno, ammirazione, e popolarità) e di simpatia per gli altri. ",
   "iti80:3.1": "Chi è soggiogato dalla paura di essere mancato di rispetto* ",
   "iti80:3.2": "dà peso a guadagno, onore e gloria (guadagno, ammirazione, e popolarità), ",
   "iti80:3.3": "o si diletta in compagnia (e ama stare in compagnia,) ",
