--- a/translation/it/soma/sutta/kn/iti/vagga9/iti80_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti80_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti80:3.1": "Chi è soggiogato dal non ricevere rispetto (dalla paura di essere mancato di rispetto* ) ",
   "iti80:3.2": "dà peso a profitto e prestigio, [guadagno, onore e gloria (guadagno, ammirazione, e popolarità),] ",
   "iti80:3.3": "o si diletta in compagnia (e ama stare in compagnia,) ",
-  "iti80:3.4": "è molto lontano dalla distruzione delle catene. ",
+  "iti80:3.4": "è lontano dalla distruzione delle catene. ",
   "iti80:4.1": "Chi lascia alle spalle figli e gregge, ",
   "iti80:4.2": "l’accasarsi e le proprietà, ",
   "iti80:4.3": "questo tipo di cercatore è capace ",
