--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.49_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "sn1.49:5.1": "wo Kleidung, Essen, Freude und Spiel ",
   "sn1.49:5.2": "schwer zu finden sind. ",
   "sn1.49:5.3": "Sie bekommen nicht einmal, ",
-  "sn1.49:5.4": "was sie von anderen erwarten. ",
+  "sn1.49:5.4": "was sie von anderen erhoffen. ",
   "sn1.49:5.5": "Das ist das Ergebnis, das sie in dieser Welt ernten, ",
   "sn1.49:5.6": "und in jener ist es ein schlechter Bestimmungsort.“ ",
   "sn1.49:6.1": "„Wir verstehen, was du sagst, ",
