--- a/translation/de/sabbamitta/sutta/sn/sn23/sn23.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn23/sn23.2_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "sn23.2:2.3": "Aber sobald sie von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach diesen Sandburgen frei sind, ziehen sie sie mit ihren Händen und Füßen auseinander, reißen sie nieder, zerstören sie und richten sie so zu, dass man nicht mehr damit spielen kann. ",
   "sn23.2:2.4": "Ebenso sollt ihr Form auseinanderziehen, niederreißen, zerstören und so zurichten, dass man nicht mehr damit spielen kann. Und ihr sollt für die Auflösung des Verlangens üben. ",
   "sn23.2:2.5": "Ihr sollt Gefühl auseinanderziehen, niederreißen, zerstören … ",
-  "sn23.2:2.6": "Ihr sollt Wahrnehmung auseinanderziehen, zerstören, niederreißen … ",
+  "sn23.2:2.6": "Ihr sollt Wahrnehmung auseinanderziehen, niederreißen, zerstören … ",
   "sn23.2:2.7": "Ihr sollt Willensbildungsprozesse auseinanderziehen, zerstören, niederreißen … ",
   "sn23.2:2.8": "Ihr sollt Bewusstsein auseinanderziehen, zerstören, niederreißen und so zurichten, dass man nicht mehr damit spielen kann. Und ihr sollt für die Auflösung des Verlangens üben. ",
   "sn23.2:2.9": "Denn die Auflösung des Verlangens ist Erlöschen.“ "
