--- a/translation/de/sabbamitta/sutta/sn/sn23/sn23.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn23/sn23.2_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "sn23.2:2.4": "Ebenso sollt ihr Form auseinanderziehen, niederreißen, zerstören und so zurichten, dass man nicht mehr damit spielen kann. Und ihr sollt für die Auflösung des Verlangens üben. ",
   "sn23.2:2.5": "Ihr sollt Gefühl auseinanderziehen, niederreißen, zerstören … ",
   "sn23.2:2.6": "Ihr sollt Wahrnehmung auseinanderziehen, niederreißen, zerstören … ",
-  "sn23.2:2.7": "Ihr sollt Willensbildungsprozesse auseinanderziehen, zerstören, niederreißen … ",
+  "sn23.2:2.7": "Ihr sollt Willensbildungsprozesse auseinanderziehen, niederreißen, zerstören … ",
   "sn23.2:2.8": "Ihr sollt Bewusstsein auseinanderziehen, zerstören, niederreißen und so zurichten, dass man nicht mehr damit spielen kann. Und ihr sollt für die Auflösung des Verlangens üben. ",
   "sn23.2:2.9": "Denn die Auflösung des Verlangens ist Erlöschen.“ "
 }
