--- a/translation/de/sabbamitta/sutta/sn/sn37/sn37.32_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn37/sn37.32_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "sn37.32:2.8": "Das ist das dritte Ding. ",
   "sn37.32:2.9": "‚Dass ich doch, wenn ich in eine geeignete Familie hineingeboren wurde, in eine geeignete Familie eingeheiratet habe und ohne Nebenfrau im Haus lebe, Kinder bekomme!‘ ",
   "sn37.32:2.10": "Das ist das vierte Ding. ",
-  "sn37.32:2.11": "‚Dass ich doch, wenn ich in eine geeignete Familie hineingeboren wurde, in eine geeignete Familie eingeheiratet habe, ohne Nebenfrau im Haus lebe und Kinder habe, meinen Mann unter meiner Kontrolle habe!‘ ",
+  "sn37.32:2.11": "‚Dass ich doch, wenn ich in eine geeignete Familie hineingeboren wurde, in eine geeignete Familie eingeheiratet habe, ohne Nebenfrau im Haus lebe und, wenn ich Kinder habe, meinen Mann unter Kontrolle habe!‘ ",
   "sn37.32:2.12": "Das ist das fünfte Ding. ",
   "sn37.32:2.13": "Diese fünf Dinge sind für Frauenspersonen, die Verdienst geschaffen haben, leicht zu bekommen.“ "
 }
