--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -1,4 +1,5 @@
 {
   "an10.219:0.1": "Ангуттара Никая 10.219 ",
-  "an10.219:0.2": "21. Рождённое поступками тело "
+  "an10.219:0.2": "21. Рождённое поступками тело ",
+  "an10.219:0.3": "Рождённое поступками тело "
 }
