--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -2,5 +2,6 @@
   "an10.219:0.1": "Ангуттара Никая 10.219 ",
   "an10.219:0.2": "21. Рождённое поступками тело ",
   "an10.219:0.3": "Рождённое поступками тело ",
-  "an10.219:1.1": "Благословенный сказал: «Монахи, я не утверждаю, что существует окончание намеренной совершённой и накопленной каммы до тех пор, покуда человек не пережил её результатов, "
+  "an10.219:1.1": "Благословенный сказал: «Монахи, я не утверждаю, что существует окончание намеренной совершённой и накопленной каммы до тех пор, покуда человек не пережил её результатов, ",
+  "an10.219:1.2": "что может случиться в этой жизни, или в следующем перерождении, или по некоему ещё более позднему случаю. "
 }
