--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -9,5 +9,6 @@
   "an10.219:3.1": "Он понимает так: ",
   "an10.219:3.2": "«Прежде мой ум был ограничен и неразвит, но теперь он безграничен и развит. Здесь не остаётся и не наличествует измеримой каммы». ",
   "an10.219:4.1": "Как вы думаете, монахи, ",
-  "an10.219:4.2": "если бы малыш развивал освобождение ума доброжелательностью с самого детства, смог бы он совершить плохой поступок?» "
+  "an10.219:4.2": "если бы малыш развивал освобождение ума доброжелательностью с самого детства, смог бы он совершить плохой поступок?» ",
+  "an10.219:4.3": "«Нет, Учитель». "
 }
