--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -12,5 +12,6 @@
   "an10.219:4.2": "если бы малыш развивал освобождение ума доброжелательностью с самого детства, смог бы он совершить плохой поступок?» ",
   "an10.219:4.3": "«Нет, Учитель». ",
   "an10.219:5.1": "«Могло бы его охватить страдание, если он не совершает плохого поступка?» ",
-  "an10.219:5.2": "«Нет, Учитель. "
+  "an10.219:5.2": "«Нет, Учитель. ",
+  "an10.219:5.3": "Ведь с чего бы страдание могло охватить того, кто не совершает плохого поступка?» "
 }
