--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -14,5 +14,6 @@
   "an10.219:5.1": "«Могло бы его охватить страдание, если он не совершает плохого поступка?» ",
   "an10.219:5.2": "«Нет, Учитель. ",
   "an10.219:5.3": "Ведь с чего бы страдание могло охватить того, кто не совершает плохого поступка?» ",
-  "an10.219:6.1": "«Поэтому мужчине или женщине нужно развивать это освобождение ума доброжелательностью. "
+  "an10.219:6.1": "«Поэтому мужчине или женщине нужно развивать это освобождение ума доброжелательностью. ",
+  "an10.219:6.2": "Мужчина или женщина не смогут забрать с собой это тело, когда придёт пора уходить. "
 }
