--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -17,5 +17,6 @@
   "an10.219:6.1": "«Поэтому мужчине или женщине нужно развивать это освобождение ума доброжелательностью. ",
   "an10.219:6.2": "Мужчина или женщина не смогут забрать с собой это тело, когда придёт пора уходить. ",
   "an10.219:6.3": "У смертных ум является их сердцевиной. ",
-  "an10.219:6.4": "Ученик Благородных понимает: "
+  "an10.219:6.4": "Ученик Благородных понимает: ",
+  "an10.219:6.5": "«Какой бы плохой поступок я ни сделал в прошлом этим рождённым поступками телом, всё это будет пережито здесь. "
 }
