--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -22,5 +22,6 @@
   "an10.219:6.6": "Оно не последует дальше». ",
   "an10.219:6.7": "Когда освобождение ума доброжелательностью было развито таким образом, то оно ведёт мудрого монаха к не-возвращению, если он не пробьётся к дальнейшему освобождению. ",
   "an10.219:7.1": "Этот ученик Благородных, монахи, который лишён жажды, лишён недоброжелательности, не имеет замешательства, бдительный, постоянно осознанный, пребывает, наполняя первую сторону света умом, наполненным состраданием… ",
-  "an10.219:7.2": "сорадованием… "
+  "an10.219:7.2": "сорадованием… ",
+  "an10.219:7.3": "Он пребывает, наполняя первую сторону света умом, наделённым невозмутимостью, равно как и вторую, равно как и третью, равно как и четвёртую. "
 }
