--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti84:2.1": "“Cercatori, quando tre persone appaiono nel mondo, appaiono per il giovamento, l’agio, la compassione, la fortuna, il beneficio e la felicità di molte gente (creature -> CHANGE & UPDATE) umane e divine.*** ",
+  "iti84:2.1": "“Cercatori, quando tre persone appaiono nel mondo, appaiono per il giovamento, l’agio, la compassione del mondo, la fortuna, il beneficio e la felicità di molte gente (creature -> CHANGE & UPDATE) umane e divine.*** ",
   "iti84:2.2": "Quali tre? ",
   "iti84:2.3": "Il primo tipo di persona che appare nel mondo è uno che è arrivato alla verità, un Arahant, un Buddha perfettamente risvegliato, dalla sapienza e dalla condotta perfetta, fortunato, conoscitore del mondo, suprema guida di chi vuol essere guidato, maestro di Deva e di esseri umani, il Buddha, il Bhagavant. ",
   "iti84:2.4": "Insegna un Dhamma che è bello all’inizio, durante e dopo, sia nel significato che nella forma e rivela un tipo di vita religiosa completamente perfetta e pura. ** ",
