--- a/translation/it/soma/sutta/kn/iti/vagga2/iti19_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga2/iti19_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti19:2.1": "“Cercatori, quando una cosa appare nel mondo appare per il giovamento e l’agio di tante creature e apporta fortuna, beneficio, e felicità a molti esseri umani e divini. ",
+  "iti19:2.1": "“Cercatori, quando una cosa appare nel mondo appare per il sollievo e l’agio di tante creature e apporta fortuna, beneficio, e felicità a molti esseri umani e divini. ",
   "iti19:2.2": "Quale cosa? ",
   "iti19:2.3": "La concordia nel Saṅgha. ",
   "iti19:2.4": "In un Saṅgha in concordia, non ci si accusa, insulta, biasima, e incolpa a vicenda. ",
