--- a/translation/it/soma/sutta/kn/iti/vagga5/iti38_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga5/iti38_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti38:2.3": "Il Tathāgata si compiace e si delizia nel non fare del male (nella non ostilità ) ",
   "iti38:2.4": "e perciò ha questo pensiero ricorrente: ",
   "iti38:2.5": "‘comportandomi in questo modo io non faccio del male a nessuna creatura, fragile o forte che sia.’ ",
-  "iti38:3.1": "Il Tathāgata si compiace e si delizia nella solitudine ",
+  "iti38:3.1": "Colui che è arrivato alla verità si compiace e si delizia nella solitudine ",
   "iti38:3.2": "e perciò ha questo pensiero ricorrente: ",
   "iti38:3.3": "‘tutto quello che è nocivo è stato abbandonato.’ (check Akusala everywhere in translation***) ",
   "iti38:4.1": "Dunque, cercatori, dimorate anche voi compiacendovi e deliziandovi nel non fare del male. ",
