--- a/translation/it/soma/sutta/kn/iti/vagga5/iti38_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga5/iti38_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti38:1.1": "Così ho udito dal Buddha, dall’Arahant: ",
-  "iti38:2.1": "“Cercatori, due tipi di pensieri sopraggiungono spesso al Tathāgata, all’Arahant, al Buddha perfettamente risvegliato: ",
+  "iti38:2.1": "“Cercatori, due tipi di pensieri sopraggiungono spesso a colui che è arrivato alla verità, all’Arahant, al Buddha perfettamente risvegliato: ",
   "iti38:2.2": "pensieri di salvaguardia e pensieri di solitudine. ",
   "iti38:2.3": "Il Tathāgata si compiace e si delizia nel non fare del male (nella non ostilità ) ",
   "iti38:2.4": "e perciò ha questo pensiero ricorrente: ",
