--- a/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti90:2.3": "Non importa quante creature ci possano essere, senza piedi, con due piedi, quattro piedi, mille piedi, con il corpo o senza corpo, coscienti, non coscienti, o ne’ coscienti ne’ non coscienti, colui che è arrivato alla verità, l’Arahant, il Buddha perfettamente risvegliato è considerato superiore a ogni altro. ",
   "iti90:2.4": "Quelli che han fede nel Buddha, han fede nel supremo. ",
   "iti90:2.5": "Quando si ha fede nel supremo si ottiene un risultato supremo. ",
-  "iti90:3.1": "Non importa quanti Dhamma condizionati o incondizionati ci possano essere, la fine della passione, ovvero la disintossicazione, la rimozione della sete, l’eradicazione della dipendenza, la rottura del ciclo dell’esistenza, la distruzione della sete, la fine della passione, la cessazione, il Nibbāna, è considerato il Dhamma superiore a ogni altro. ",
+  "iti90:3.1": "Non importa quanti Dhamma condizionati (creati) o incondizionati (non creati) ci possano essere, la fine della passione, ovvero la disintossicazione, la rimozione della sete, l’eradicazione della dipendenza, la rottura del ciclo dell’esistenza, la distruzione della sete, la fine della passione, la cessazione, il Nibbāna, è considerato il Dhamma superiore a ogni altro. ",
   "iti90:3.2": "Quelli che han fede nel Dhamma, han fede nel supremo. ",
   "iti90:3.3": "Quando si ha fede nel supremo si ottiene un risultato supremo. ",
   "iti90:4.1": "Non importa quante comunità o congregazioni ci possano essere, la comunità dei discepoli del Buddha, ovvero i quattro tipi di persone, gli otto individui, questa comunità di discepoli del Buddha che è degna di offerte, di ospitalità, di doni, di reverenza, ineguagliabile* campo di ricchezza spirituale nel mondo, è considerata superiore a ogni altro. ",
