--- a/translation/de/sabbamitta/sutta/an/an8/an8.59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.59_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an8.59:1.4": "Diese acht Menschen sind einer den Göttern gewidmeten Gabe würdig, der Gastfreundschaft würdig, einer religiösen Gabe würdig, des Grußes mit zusammengelegten Händen würdig und sind das unübertreffliche Feld für Verdienst für die Welt. ",
   "an8.59:2.1": "Vier, die den Pfad üben, ",
   "an8.59:2.2": "und vier, die bei der Frucht verankert sind: ",
-  "an8.59:2.3": "Das ist der aufrechte Saṅgha ",
+  "an8.59:2.3": "Das ist der aufrichtige Saṅgha ",
   "an8.59:2.4": "mit Weisheit, Sittlichkeit und Versenkung. ",
   "an8.59:3.1": "Für Menschen auf der Suche nach Verdienst, ",
   "an8.59:3.2": "die Opfer spenden ",
